--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 	</div>
 
 	<img class="soundButton paused" src="sound.gif" alt="Alt" >
-		<audio class="audio" src="media/India 4K.mp3" loop></audio>
+		<audio class="audio" src="India 4K.mp3" loop></audio>
 
 </body>
 </html>
